samples/_failures_safe/1761275480_3d4102_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0e35bc4.c: In function ‘main’:
./samples/SAFE/__tmp_b0e35bc4.c:147:16: error: missing terminating " character
  147 |         printf("Invalid rows\n
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b0e35bc4.c:147:9: error: expected expression at end of input
  147 |         printf("Invalid rows\n
      |         ^~~~~~
./samples/SAFE/__tmp_b0e35bc4.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0e35bc4.c:147:9: error: expected declaration or statement at end of input
